--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,4 +25,4 @@ test-code-job2:
   script:
     - ls -la
     - helm repo add jhidalgo3-github https://jhidalgo3.github.io/helm-charts/
-    - helm install my-hello-kubernetes-chart jhidalgo3-github/hello-kubernetes-chart --version 3.0.0 -n hello-test
+    - helm upgrade --install my-hello-kubernetes-chart jhidalgo3-github/hello-kubernetes-chart --version 3.0.0 -n hello-test
