add my test helm chart

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,3 +25,10 @@ test-code-job2:
     - ls -la
     - helm repo add jhidalgo3-github https://jhidalgo3.github.io/helm-charts/
     - helm upgrade --install my-hello-kubernetes-chart jhidalgo3-github/hello-kubernetes-chart --version 3.0.0 -n hello-test
+
+test-code-job3:
+  stage: deploy
+  image: alpine/helm:3.9.1
+  script:
+    - cd helmcharts
+    - helm upgrade --install mydemochart mydemo -n test2
