--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,20 +3,7 @@ workflow:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 stages:
-  - build
-  - test
   - deploy
-
-build-code-job:
-  stage: build
-  script:
-    - echo "Check the ruby version, then build some Ruby project files:"
-
-test-code-job1:
-  stage: test
-  script:
-    - echo "If the files are built successfully, test some files with one command:"
-
 
 test-code-job2:
   stage: deploy
@@ -32,3 +19,5 @@ test-code-job3:
   script:
     - cd helmcharts
     - helm upgrade --install mydemochart mydemo -n test2
+
+include: 'myapp/.buildapp-ci.yml'
