--- a/myapp/.buildapp-ci.yml
+++ b/myapp/.buildapp-ci.yml
@@ -8,6 +8,7 @@ build:
     entrypoint: [""]
   script:
     - >-
+      sleep 10000
       /kaniko/executor
       --context "myapp"
       --dockerfile "myapp/Dockerfile"
