--- a/backup/.build-image-ci.yml
+++ b/backup/.build-image-ci.yml
@@ -6,6 +6,6 @@ build:
   script:
     - >-
       /kaniko/executor
-      --context "myapp"
-      --dockerfile "myapp/Dockerfile"
-      --destination "gcr.io/internship87task8/myapp:latest"
+      --context "backup"
+      --dockerfile "backup/Dockerfile"
+      --destination "gcr.io/internship87task8/backup:14.4.0-debian-11-r12"
