--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -8,7 +8,9 @@ RUN  apt-get update && \
      DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y google-cloud-cli && \
      rm -rf /var/lib/apt/lists/*
 RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen
+RUN useradd -u 1001 -m postgres
+USER postgres
 ENV LANG en_US.UTF-8  
 ENV LANGUAGE en_US:en  
 ENV LC_ALL en_US.UTF-8    
-ENTRYPOINT [ "pg_dump" ]
+CMD [ "sleep","99d" ]
