--- a/application/mysite/.gitlab-ci.yml
+++ b/application/mysite/.gitlab-ci.yml
@@ -6,6 +6,6 @@ build-app:
   script:
     - >-
       /kaniko/executor
-      --context "myapp"
+      --context "wagtail"
       --dockerfile "./Dockerfile"
       --destination "gcr.io/internship87task8/wagtail:latest"
