add path to image in gcr

--- a/helmcharts/app_helmChart/templates/deployment.yaml
+++ b/helmcharts/app_helmChart/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name : app-wagtail
-          image: vlad19930310/zhaludkovichdocker:wagtail
+          image: ghcr.io/wagtail:latest
           ports:
             - containerPort: 8000
 
