edit helm chart

--- a/helmcharts/app_helmChart/templates/deployment.yaml
+++ b/helmcharts/app_helmChart/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name : app-wagtail
-          image: ghcr.io/wagtail:latest
+          image: gcr.io/internship87task8/wagtail:latest
           ports:
             - containerPort: 8000
 
