--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,5 +29,5 @@ deploy-wagtail:
     - helm upgrade --install wagtail-chart app_helmChart -n postgresql
 
 #include: 'myapp/.buildapp-ci.yml'
-#include: 'backup/.build-image-ci.yml'
+include: 'backup/.build-image-ci.yml'
 include: 'application/mysite/.build-wagtail.yml'
