--- a/helmcharts/app_helmChart/templates/postgres-storage.yaml
+++ b/helmcharts/app_helmChart/templates/postgres-storage.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/var/lib/data"
+    path: "/var/lib/data2"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
