--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,27 @@ workflow:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 stages:
+  - sonar-scan
   - build
   - deploy
+  
+sonarqube-check:
+  stage: sonar-scan
+  tags:
+    - docker
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner
+  allow_failure: true
 
 # test-code-job2:
 #   stage: deploy
@@ -29,5 +48,5 @@ deploy-wagtail:
     - helm upgrade --install wagtail-chart app_helmChart -n postgresql
 
 #include: 'myapp/.buildapp-ci.yml'
-include: 'backup/.build-image-ci.yml'
+#include: 'backup/.build-image-ci.yml'
 include: 'application/mysite/.build-wagtail.yml'
