--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ workflow:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 stages:
-  - sonar-scan
+  #- sonar-scan
   - build
   - deploy
   
@@ -49,4 +49,4 @@ deploy-wagtail:
 
 #include: 'myapp/.buildapp-ci.yml'
 #include: 'backup/.build-image-ci.yml'
-include: 'application/mysite/.build-wagtail.yml'
+#include: 'application/mysite/.build-wagtail.yml'
