changes in deployment values

--- a/helmcharts/app_helmChart/templates/deployment.yaml
+++ b/helmcharts/app_helmChart/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
 
 
 ---
-apiVersion: {{ .Values.HPA.apiVersion }}
+apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Values.HPA.name }}
