--- a/helmcharts/app_helmChart/templates/service.yaml
+++ b/helmcharts/app_helmChart/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.name }}
+  name: {{ $.Values.service.name }}
   labels:
      env  : {{ .Values.service.metadata.labels.env }}
 spec:
