--- a/helmcharts/app_helmChart/templates/deployment.yaml
+++ b/helmcharts/app_helmChart/templates/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion : apps/v1 
 kind: Deployment
 metadata:
-  name: {{ $.Values.app.name }}
+  name: {{ .Values.app.name }}
   labels:
     app : {{ .Values.app.metadata.labels.app }}
 spec:
