--- a/helmcharts/app_helmChart/templates/prod_ClusterIssuer.yaml
+++ b/helmcharts/app_helmChart/templates/prod_ClusterIssuer.yaml
@@ -1,19 +1,19 @@
-apiVersion: cert-manager.io/v1
+apiVersion: {{ .Values.prod_Clusterissuer.apiVersion }}
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-prod
+  name: {{ .Values.prod_Clusterissuer.name }}
 spec:
   acme:
     # You must replace this email address with your own.
     # Let's Encrypt will use this to contact you about expiring
     # certificates, and issues related to your account.
-    email: yury.market.ma@gmail.com
-    server: https://acme-v02.api.letsencrypt.org/directory
+    email: {{ .Values.prod_Clusterissuer.email }}
+    server: {{ .Values.prod_Clusterissuer.server }}
     privateKeySecretRef:
       # Secret resource that will be used to store the ACME account's private key.
-      name: letsencrypt-prod-private-key
+      name: {{ .Values.prod_Clusterissuer.privateKeySecretRef.name }}
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
     - http01:
         ingress:
-          class: nginx
+          class: {{ .Values.prod_Clusterissuer.class }}
