test edit ci pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ workflow:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 stages:
-  - sonar-scan
-  - build
+ # - sonar-scan
+ # - build
   - deploy
   
 sonarqube-check:
@@ -45,8 +45,8 @@ deploy-wagtail:
   image: alpine/helm:3.9.1
   script:
     - cd helmcharts
-    - helm upgrade --install wagtail-chart app_helmChart -n postgresql
+    - helm upgrade --install wagtail-chart app_helmChart -n dev
 
 #include: 'myapp/.buildapp-ci.yml'
 #include: 'backup/.build-image-ci.yml'
-include: 'application/mysite/.build-wagtail.yml'
+#include: 'application/mysite/.build-wagtail.yml'
