test edit ci pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,11 +47,11 @@ deploy-wagtail:
     - cd helmcharts
     - helm upgrade --install wagtail-chart app_helmChart -n dev
 
-health-wagtail:
-  stage: test
-  image: wbitt/network-multitool
-  script:
-    - nslookup wagtail.prtest.tech
+# health-wagtail:
+#   stage: test
+#   image: wbitt/network-multitool
+#   script:
+#     - nslookup wagtail.prtest.tech
        
 
 #include: 'myapp/.buildapp-ci.yml'
