add ingress to sonarqube helm chart

--- a/helmcharts/app_helmChart/templates/ingress.yaml
+++ b/helmcharts/app_helmChart/templates/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   tls:
   - hosts:
     - {{ .Values.ingress.app.host }}
-    - {{ .Values.ingress.sonarqube.host }}   
+  #  - {{ .Values.ingress.sonarqube.host }}   
     
     secretName: {{ .Values.ingress.secretName }}
   rules:
@@ -25,14 +25,14 @@ spec:
                 port: 
                   number: {{ .Values.ingress.app.port.number }}  
 
-  - host: {{ .Values.ingress.sonarqube.host }}
-    http:
-        paths:
-          - pathType: {{ .Values.ingress.sonarqube.pathType }}
-            path: {{ .Values.ingress.sonarqube.path }}
-            backend:
-              service:
-                name: {{ .Values.ingress.sonarqube.name }}
-                port: 
-                  number: {{ .Values.ingress.sonarqube.port.number }}   
+  # - host: {{ .Values.ingress.sonarqube.host }}
+  #   http:
+  #       paths:
+  #         - pathType: {{ .Values.ingress.sonarqube.pathType }}
+  #           path: {{ .Values.ingress.sonarqube.path }}
+  #           backend:
+  #             service:
+  #               name: {{ .Values.ingress.sonarqube.name }}
+  #               port: 
+  #                 number: {{ .Values.ingress.sonarqube.port.number }}   
    
