add manual start in pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,7 @@ deploy-wagtail:
   script:
     - cd helmcharts
     - helm upgrade --install wagtail-chart app_helmChart -n dev
+  when: manual  
 
 # health-wagtail:
 #   stage: test
