--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,7 +102,7 @@ health-wagtail-stage:
   image: wbitt/network-multitool
   script:
     - nslookup wagtail.prtest.tech
-  [deploy-stage]  
+  needs: [deploy-stage]  
 
 deploy-production:
   stage: deploy-production
