--- a/application/mysite/Dockerfile
+++ b/application/mysite/Dockerfile
@@ -12,7 +12,9 @@ EXPOSE 8000
 # 2. Set PORT variable that is used by Gunicorn. This should match "EXPOSE"
 #    command.
 ENV PYTHONUNBUFFERED=1 \
-    PORT=8000
+    PORT=8000 \
+    USERNAME=wagtail \
+    PASSWORD=MWYyZDFlMmU2N2Rm
 
 # Install system packages required by Wagtail and Django.
 RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-recommends \
